fix menu header z-index

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  z-index: 2;
+  z-index: 5;
 
   width: 100%;
 
